Fixed bug #32081 (default socket value is not being used).